--- a/.drone.yml
+++ b/.drone.yml
@@ -1,7 +1,5 @@
---- 
-clone: 
-  depth: 1
 kind: pipeline
+type: docker
 name: Kernel Compiling
 steps: 
   - 
@@ -18,6 +16,6 @@ steps:
         from_secret: GH_USERNAME
     image: alpine
     name: Compilation
-    trigger: 
+    when: 
       branch: 
-        - unified-tes
+        - perf
