--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,8 @@ jobs:
       - run:
           no_output_timeout: 30m 
           command: |
-            git clone https://github.com/dimas-ady/kernel-builder-droneci -b perf
+            ls
+            git clone https://github.com/dimas-ady/kernel-builder-droneci -b modsu
             cd kernel-builder-droneci
             bash run.sh
 workflows:
